@@ -11,6 +11,7 @@ Release date: March 3, 2022
 * Enhancement: Info List - Added spacing option for button
 * Enhancement: Icon List - Added icon size option for individual icons
 * Enhancement: Link Effects - Added HTML tag option
+* Enhancement: Display Conditions - Added support for adding multiple parameters
 * Enhancement: Moved PowerPack extensions settings tab below Advanced section for easy accessibility
 * Fixed: Dual Heading - Fixed minor CSS glitch
 
